<resources>
    <string name="app_name">ASAssignment</string>
    <string name="log_in">Log in!</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_acoount">Already have an acoount?</string>
    <string name="home_page">Home Page</string>
    <string name="change_picture">Change Picture</string>
    <string name="sign_out">Sign Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="back">Back</string>
    <string name="Sign_In" />
</resources>